#############################################
# 14/04/08 - Added the initial classes for 
the server-side AI library.
#############################################

#############################################
# 14/04/08 - Initial changes made to the server 
webapp in preperation for integrating with Jedai.
#############################################

Client input is now handled by a Red5 'service' rather than the Application class.
Fixed bug in input handling on server side, Player object now updates its avatar until it's time matches that of the client. Client input need not be sent continually now, only when it's changed.
Changed 'Room' object to more generic name 'Zone'.
Zones use the strategy pattern to handle player input, each Avatar in the Zone is manipulated by a behaviour that implements the IAvatarBehaviour interface. This brings the server in line with the client side, in preperation for Actionscript support in Red5.

#############################################
# 09/04/08 - Modified the synchronisation method.
#############################################

Proxy object now holds the correct Input data so if there's a gap in server 
response the proxy will continue to move with the last input set instead of
becoming stationary.

#############################################
# 08/04/08 - Added destroy() methods.
#############################################

Added destroy methods to the Avatar and it's descendants to make sure that 
objects are cleared for GC as well as possible when a remote player disconnects.

#############################################
# 07/04/08 - Refactored server code.
#############################################

The server was returning the wrong classname for the player's object - causing the player
to throw an error. Fixed this.

#############################################
# 06/04/08 - Added space station and planet
objects to default Aereon scene.
#############################################
